# whisper-transcription-wayland

./: Cargo.toml  LICENSE
src/: audio.rs  main.rs
